--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
 
-    <head>ChatIDK</head>
+    <head>
+        ChatIDK
+        <meta charset="UTF-8">
+    </head>
 
     <body>
         {% if session.username %}
         <p>Olet kirjautunut nimellä {{ session.username }}</p>
         <a href="/logout">Kirjaudu ulos</a>
+        <a href="/deactivate">Poista tili</a>
 
-        {% elif chose_login %}
+        {% elif state_login %}
         <form action="/login" method="POST">
             <p>Tunnus:<br><input type="text" name="username"></p>
             <p>Salasana:<br><input type="password" name="password"></p>
             <input type="submit" value="Kirjaudu">
         </form>
-            <p>{{ lerrmsg }}</p>
 
-        {% elif chose_register %}
+        {% elif state_register %}
             <form action="/register" method="POST">
                 <p>Tunnus:<br><input type="text" name="username"></p>
                 <p>Salasana:<br><input type="password" name="password"></p>
@@ -24,8 +27,8 @@
             </form>
 
         {% else %}
-            <a href="/chose_login">Kirjaudu</a>
-            <a href="/chose_register">Rekisteröidy</a>
+            <a href="/state_login">Kirjaudu</a>
+            <a href="/state_register">Rekisteröidy</a>
 
         {% endif %}
 
