--- a/chatidk/templates/index.html
+++ b/chatidk/templates/index.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         {% block head %}
-        <h1>ChatIDK</h1>
+        <title>{% block title %}{% endblock %} - ChatIDK</title>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <ul class=flashes>
                 {% for message in messages %}
-                <li>{{ message }}</li>
+                    <li>{{ message }}</li>
                 {% endfor %}
                 </ul>
             {% endif %}
         {% endwith %}
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
         {% endblock %}
     </head>
 
-    <body>
-        <div>
-            {% block body %}
+    <nav>
+        <h1>ChatIDK</h1>
+        <ul>
             {% if session.username %}
-            <p>Olet kirjautunut nimellä {{ session.username }}</p>
-            <form action="/logout" method="GET">
-                <input type="submit" value="Kirjaudu ulos">
-            </form>
-            <form action="/deactivate" method="GET">
-                <input type="submit" value="Poista tili">
-            </form>
-
-
+                <li><span>{{ session["username"] }}</span>
+                <form action="/logout" method="GET">
+                    <input type="submit" value="Kirjaudu ulos">
+                </form>
+                <form action="/deactivate" method="GET">
+                    <input type="submit" value="Poista tili">
+                </form>
             {% else %}
-            <form action="/login" method="GET">
-                <input type="submit" value="Kirjaudu">
-            </form>
-            <form action="/register" method="GET">
-                <input type="submit" value="Rekisteröidy">
-            </form>
-
+                <form action="/login" method="GET">
+                    <input type="submit" value="Kirjaudu">
+                </form>
+                <form action="/register" method="GET">
+                    <input type="submit" value="Rekisteröidy">
+                </form>
             {% endif %}
-            {% endblock %}
-        </div>
+        </ul>
+    </nav>
+<section class=""content>
+    <body>
+        <header>
+            {% block header %}{% endblock %}
+        </header>
+        {% block content %}
+            
+        {% endblock %}
     </body>
-
+</section>
 </html>
