Added file transfer and storage. Hack for now.

--- a/chatidk/static/style.css
+++ b/chatidk/static/style.css
@@ -33,3 +33,32 @@ nav {
     align-items: center;
     padding: 0 0.5rem;
 }
+
+.chat {
+    border: 2px solid #deeedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.darker {
+    border-color: #ccc;
+    background-color: #ddd;
+}
+
+.chat::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.time-right {
+    float: right;
+    color: #aaa;
+}
+
+.time-left {
+    float: left;
+    color: #999;
+}
